--- a/index.html
+++ b/index.html
@@ -5,9 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enact & Engage</title>
     <style>
+      /* Apply a dark theme to the entire page */
+      body {
+        background-color: #121212;
+        color: #e0e0e0;
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+      }
+
+      /* Style the form container */
+      #chatForm {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #1f1f1f;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        width: 100%;
+        max-width: 600px;
+      }
+
+      /* Style the input field */
+      #userInput {
+        width: 100%;
+        padding: 15px;
+        margin-bottom: 10px;
+        border: none;
+        border-radius: 4px;
+        font-size: 18px;
+        background-color: #2c2c2c;
+        color: #e0e0e0;
+      }
+
+      #userInput::placeholder {
+        color: #999;
+      }
+
+      /* Style the send button */
+      #chatForm button {
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        background-color: #6200ea;
+        color: white;
+        font-size: 18px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+
+      #chatForm button:hover {
+        background-color: #3700b3;
+      }
+
+      /* Style the chat response area */
       #chatResponse {
+        margin-top: 20px;
+        padding: 15px;
+        background-color: #1f1f1f;
+        border-radius: 8px;
+        width: 100%;
+        max-width: 600px;
+        min-height: 200px;
         white-space: pre-wrap;
         word-wrap: break-word;
+        color: #b3b3b3;
+        font-size: 16px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
       }
     </style>
   </head>
@@ -31,7 +99,7 @@
         userInput.value = "";
 
         try {
-          const response = await fetch("/api/chat", {
+          const response = await fetch("https://e3-ai.onrender.com/api/chat", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
