--- a/chat.html
+++ b/chat.html
@@ -69,10 +69,8 @@
         </div>
       </div>
     </main>
+
+    <script src="https://kit.fontawesome.com/3a80d61288.js" crossorigin="anonymous"></script>
+    <script src="chat.js"></script>
   </body>
 </html>
-
-<script
-  src="https://kit.fontawesome.com/3a80d61288.js"
-  crossorigin="anonymous"
-></script>
